add simple akka example, multiple threading example

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>completable-future</module>
         <module>rabbitmq</module>
         <module>temporary</module>
+        <module>akka</module>
+        <module>multi-threading</module>
     </modules>
 
     <dependencies>
