--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -11,4 +11,13 @@
 
     <artifactId>rabbitmq</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.10.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
