reorg projects and add java lambda examples

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>temporary</module>
         <module>akka</module>
         <module>multi-threading</module>
+        <module>lambda</module>
     </modules>
 
     <dependencies>
