--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>akka</module>
         <module>multi-threading</module>
         <module>lambda</module>
+        <module>general</module>
     </modules>
 
     <dependencies>
